--- a/charts/stable/home-assistant/overrides/override-values.yaml
+++ b/charts/stable/home-assistant/overrides/override-values.yaml
@@ -29,10 +29,17 @@ service:
         port: 8123
 
 ingress:
-  # -- Enable and configure ingress settings for the chart under this key.
-  # @default -- See values.yaml
   main:
-    enabled: false
+    enabled: true
+    annotations:
+      nginx.org/websocket-services: home-assistant
+    hosts:
+      - host: home-assistant.example.org
+        paths:
+          - path: /
+            service:
+              name: home-assistant
+              port: 8123
 
 # -- Enable devices to be discoverable
 # hostNetwork: true
@@ -60,7 +67,7 @@ persistence:
 #    For more options see [mariadb chart documentation](https://github.com/bitnami/charts/tree/master/bitnami/mariadb)
 # @default -- See values.yaml
 mariadb:
-  enabled: false
+  enabled: true
   architecture: standalone
   auth:
     database: home-assistant
@@ -69,14 +76,14 @@ mariadb:
     rootPassword: home-assistantrootpass
   primary:
     persistence:
-      enabled: false
+      enabled: true
       # storageClass: ""
 
 # -- Enable and configure postgresql database subchart under this key.
 #    For more options see [postgresql chart documentation](https://github.com/bitnami/charts/tree/master/bitnami/postgresql)
 # @default -- See values.yaml
 postgresql:
-  enabled: false
+  enabled: true
   image:
     repository: bitnami/postgresql
     tag: 14.1.0
@@ -85,20 +92,22 @@ postgresql:
   postgresqlDatabase: home-assistant
   persistence:
     primary:
-      enabled: false
+      enabled: true
       # storageClass: ""
 
 # -- Enable and configure influxdb database subchart under this key.
 #    For more options see [influxdb chart documentation](https://github.com/bitnami/charts/tree/master/bitnami/influxdb)
 # @default -- See values.yaml
 influxdb:
-  enabled: false
+  enabled: true
   architecture: standalone
   database: home_assistant
   auth:
-    enabled: false
+    enabled: true
+    admin:
+      password: password123
   persistence:
-    enabled: false
+    enabled: true
     # storageClass: ""
     # size: 8Gi
 
@@ -133,7 +142,7 @@ metrics:
       #     absent(up{job=~".*home-assistant.*"} == 1)
       #   for: 5m
       #   labels:
-      #     severity: critical
+    #     severity: critical
 
 addons:
   # -- Enable and configure codeserver for the chart.
@@ -147,5 +156,5 @@ addons:
       - --user-data-dir
       - /data/config/.vscode
     volumeMounts:
-    - name: config
-      mountPath: /data/config
+      - name: config
+        mountPath: /data/config
